--- a/composer.json
+++ b/composer.json
@@ -41,12 +41,12 @@
     {
       "type": "package",
       "package": {
-        "name": "wordpress",
+        "name": "wordpress-bg",
         "version": "3.8.1",
         "type": "webroot",
         "dist": {
           "type": "zip",
-          "url": "https://github.com/WordPress/WordPress/archive/3.8.1.zip"
+          "url": "http://bg.wordpress.org/wordpress-3.8.1-bg_BG.zip"
         },
         "require" : {
           "fancyguy/webroot-installer": "1.1.0"
@@ -56,7 +56,7 @@
   ],
   "require": {
     "php": ">=5.3.2",
-    "wordpress": "3.8.1",
+    "wordpress-bg": "3.8.1",
     "fancyguy/webroot-installer": "1.1.0",
     "composer/installers": "v1.0.12",
     "wp-cli/wp-cli": "v0.14.1",
@@ -69,6 +69,6 @@
       "web/app/themes/{$name}/": ["type:wordpress-theme"]
     },
     "webroot-dir": "web/wp",
-    "webroot-package": "wordpress"
+    "webroot-package": "wordpress-bg"
   }
 }
