Add cyr to lat enhanced plugin

--- a/composer.json
+++ b/composer.json
@@ -68,7 +68,8 @@
     "wpackagist-plugin/mailchimp-for-wp": "*",
     "wpackagist-plugin/shortcodes-ultimate": "*",
     "wpackagist-plugin/wpremote": "*",
-    "wpackagist-plugin/wp-super-cache": "*"
+    "wpackagist-plugin/wp-super-cache": "*",
+    "wpackagist-plugin/cyr3lat": "*"
   },
   "extra": {
     "installer-paths": {
