Add the kyte theme
The theme is loaded from a private Git repo because it’s not a free
theme and its license does not allow free distribution of its contents.

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ web/app/upgrade
 web/app/uploads/*
 !web/app/uploads/.gitkeep
 !web/app/mu-plugins/register-theme-directory.php
+web/app/themes/kyte
 
 # Vendor (e.g. Composer)
 vendor/*
