--- a/composer.json
+++ b/composer.json
@@ -62,6 +62,9 @@
         "dist": {
           "type": "zip",
           "url": "https://github.com/tommusrhodus/ebor-cpt/archive/master.zip"
+        },
+        "extra": {
+          "installer-name": "ebor-cpt-master"
         }
       }
     },
@@ -74,6 +77,9 @@
         "dist": {
           "type": "zip",
           "url": "https://github.com/tommusrhodus/Ebor-Shortcodes/archive/master.zip"
+        },
+        "extra": {
+          "installer-name": "Ebor-Shortcodes-master"
         }
       }
     },
@@ -86,6 +92,9 @@
         "dist": {
           "type": "zip",
           "url": "https://github.com/tommusrhodus/Ebor-Popular-Posts/archive/master.zip"
+        },
+        "extra": {
+          "installer-name": "Ebor-Popular-Posts-master"
         }
       }
     },
