Add and configure the BackUpWordPress plugin

--- a/composer.json
+++ b/composer.json
@@ -180,6 +180,7 @@
     "wpackagist-plugin/cyr3lat": "*",
     "wpackagist-plugin/wordpress-importer": "*",
     "wpackagist-plugin/developer": "*",
+    "wpackagist-plugin/backupwordpress": "*",
     "wpackagist-plugin/widget-shortcode": "*"
   },
   "extra": {
