--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ web/app/uploads/*
 !web/app/uploads/.gitkeep
 !web/app/mu-plugins/register-theme-directory.php
 web/app/themes/kyte
+web/app/cache
 
 # Vendor (e.g. Composer)
 vendor/*
