Add new plugins

--- a/composer.json
+++ b/composer.json
@@ -171,15 +171,19 @@
     "wpackagist-theme/twentythirteen": "*",
     "wpackagist-plugin/akismet": "*",
     "wpackagist-plugin/backupwordpress": "*",
+    "wpackagist-plugin/better-wp-security": "4.*",
     "wpackagist-plugin/column-shortcodes": "*",
     "wpackagist-plugin/cyr3lat": "*",
     "wpackagist-plugin/developer": "*",
     "wpackagist-plugin/google-analytics-dashboard-for-wp": "*",
+    "wpackagist-plugin/google-analytics-for-wordpress": "*",
     "wpackagist-plugin/jetpack": "*@stable",
     "wpackagist-plugin/keyring": "*",
     "wpackagist-plugin/keyring-social-importers": "*",
     "wpackagist-plugin/mailchimp-for-wp": "*",
     "wpackagist-plugin/shortcodes-ultimate": "*",
+    "wpackagist-plugin/verify-google-webmaster-tools": "*",
+    "wpackagist-plugin/w3-total-cache": "*",
     "wpackagist-plugin/widget-shortcode": "*",
     "wpackagist-plugin/wordpress-importer": "*",
     "wpackagist-plugin/wp-super-cache": "*",
