Update the kyte theme using a manual version
I had problems making composer pick up changes in the remote repo via a
“dev-master” version specification, so I moved to manual versioning.
The theme’s version is 1.1.19. Adding a “.1” at the end means we’ve made
changes in one revision to 1.1.19-base.

Fixes #7.

--- a/composer.json
+++ b/composer.json
@@ -129,7 +129,7 @@
       "package": {
         "name": "tommusrhodus/kyte",
         "type": "wordpress-theme",
-        "version": "master",
+        "version": "1.1.19.1",
         "source": {
           "type": "git",
           "url": "git@bitbucket.org:openmediabg/kyte.git",
@@ -166,7 +166,7 @@
     "composer/installers": "v1.0.12",
     "wp-cli/wp-cli": "v0.14.1",
     "vlucas/phpdotenv": "~1.0.6",
-    "tommusrhodus/kyte": "dev-master",
+    "tommusrhodus/kyte": "*",
     "jetpack-photon-local-domains": "*",
     "wpackagist-theme/twentythirteen": "*",
     "wpackagist-plugin/akismet": "*",
