--- a/web/.htaccess
+++ b/web/.htaccess
@@ -2,6 +2,8 @@ Options -Indexes
 
 # BEGIN WordPress
 <IfModule mod_rewrite.c>
+RewriteEngine On
+RewriteBase /
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
