--- a/composer.json
+++ b/composer.json
@@ -28,30 +28,15 @@
     "generate-salts": true
   },
   "autoload": {
-    "psr-0": {"Bedrock\\Installer": "scripts"}
+    "psr-0": {"Roots\\Bedrock\\Installer": "scripts"}
   },
   "scripts": {
-    "post-root-package-install": ["Bedrock\\Installer::addSalts"]
+    "post-root-package-install": ["Roots\\Bedrock\\Installer::addSalts"]
   },
   "repositories": [
     {
       "type": "composer",
       "url": "http://wpackagist.org"
-    },
-    {
-      "type": "package",
-      "package": {
-        "name": "wordpress-bg",
-        "version": "3.9.2",
-        "type": "webroot",
-        "dist": {
-          "type": "zip",
-          "url": "http://bg.wordpress.org/wordpress-3.9.2-bg_BG.zip"
-        },
-        "require" : {
-          "fancyguy/webroot-installer": "1.1.0"
-        }
-      }
     },
     {
       "type": "package",
@@ -159,12 +144,9 @@
     }
   ],
   "require": {
-    "php": ">=5.3.2",
-    "wordpress-bg": "3.9.2",
-    "fancyguy/webroot-installer": "1.1.0",
+    "php": ">=5.4",
+    "johnpbloch/wordpress": "4.1",
     "composer/installers": "v1.0.12",
-    "wp-cli/wp-cli": "v0.14.1",
-    "vlucas/phpdotenv": "~1.0.6",
     "tommusrhodus/kyte": "*",
     "jetpack-photon-local-domains": "*",
     "wpackagist-theme/twentythirteen": "*",
@@ -186,15 +168,15 @@
     "wpackagist-plugin/widget-shortcode": "*",
     "wpackagist-plugin/wordpress-importer": "*",
     "wpackagist-plugin/wp-super-cache": "*",
-    "wpackagist-plugin/wpremote": "*"
+    "wpackagist-plugin/wpremote": "*",
+    "vlucas/phpdotenv": "1.0.9"
   },
   "extra": {
     "installer-paths": {
-      "web/app/plugins/{$name}/": ["type:wordpress-plugin"],
       "web/app/mu-plugins/{$name}/": ["type:wordpress-muplugin"],
+      "web/app/plugins/{$name}/": ["type:wordpress-plugin"],
       "web/app/themes/{$name}/": ["type:wordpress-theme"]
     },
-    "webroot-dir": "web/wp",
-    "webroot-package": "wordpress-bg"
+    "wordpress-install-dir": "web/wp"
   }
 }
