Use a secure source for composer packages
Without this change, composer 1.1 complains with the following:

  [Composer\Downloader\TransportException]
  Your configuration does not allow connections to http://wpackagist.org/packages.json. See https://getcomposer.org/doc/06-config.md#secure-http for details.

--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
   "repositories": [
     {
       "type": "composer",
-      "url": "http://wpackagist.org"
+      "url": "https://wpackagist.org"
     },
     {
       "type": "package",
