--- a/composer.json
+++ b/composer.json
@@ -124,21 +124,8 @@
           "tommusrhodus/ebor-cpt": "*@dev",
           "tommusrhodus/Ebor-Shortcodes": "*@dev",
           "tommusrhodus/Ebor-Popular-Posts": "*@dev",
-          "zilla-likes": "*@dev",
-          "wpackagist-plugin/contact-form-7": "4.7"
-        }
-      }
-    },
-    {
-      "type": "package",
-      "package": {
-        "name": "jetpack-photon-local-domains",
-        "type": "wordpress-plugin",
-        "version": "0.0.1",
-        "source": {
-          "type": "git",
-          "url": "https://github.com/openmediabg/jetpack-photon-local-domains.git",
-          "reference": "master"
+          "wpackagist-plugin/contact-form-7": "4.7",
+          "zilla-likes": "*@dev"
         }
       }
     }
@@ -147,8 +134,6 @@
     "php": ">=5.4",
     "johnpbloch/wordpress": "4.7.3",
     "composer/installers": "v1.0.12",
-    "tommusrhodus/kyte": "*",
-    "jetpack-photon-local-domains": "*",
     "wp-cli/wp-cli": "*",
     "wpackagist-theme/twentythirteen": "*",
     "wpackagist-plugin/akismet": "*",
@@ -171,7 +156,8 @@
     "wpackagist-plugin/wordpress-importer": "*",
     "wpackagist-plugin/wp-super-cache": "*",
     "wpackagist-plugin/wpremote": "*",
-    "vlucas/phpdotenv": "1.0.9"
+    "vlucas/phpdotenv": "1.0.9",
+    "tommusrhodus/kyte": "1.1.19.3"
   },
   "extra": {
     "installer-paths": {
